Indicators migration, seed & endpoint + Updated swagger
