# routes/api.php
@@ -19,6 +19,7 @@ $api->version('v1', function (Router $api) {
         $api->get('questions/{step}', 'App\\Api\\V1\\Controllers\\QuestionsController@getByStep');
         $api->get('counties', 'App\\Api\\V1\\Controllers\\CountiesController@listAll');
         $api->get('institutions/{type}', 'App\\Api\\V1\\Controllers\\InstitutionsController@getByType');
+        $api->get('indicators', 'App\\Api\\V1\\Controllers\\IndicatorsController@listAll');
 
         $api->get('protected', function() {
             return response()->json([
